2012-07-18  Tony Chang  <tony@chromium.org>

        [chromium] Fix compile on Windows.

        148>tests\LayerChromiumTest.cpp(510): warning C4305: 'argument' : truncation from 'double' to 'float'

        * tests/LayerChromiumTest.cpp:

2012-07-18  Alec Flett  <alecflett@chromium.org>

        Implement putIndexKeys in WebIDBObjectStoreImpl
        https://bugs.webkit.org/show_bug.cgi?id=91546

        Reviewed by Darin Fisher.

        Implement putIndexKeys in the chromium API, so it is callable
        from chromium.

        * src/WebIDBObjectStoreImpl.cpp:
        (WebKit::WebIDBObjectStoreImpl::putWithIndexKeys):
        (WebKit):
        * src/WebIDBObjectStoreImpl.h:
        (WebIDBObjectStoreImpl):

2012-07-18  Tony Chang  <tony@chromium.org>

        [chromium] Unreviewed compile fix for Android.

        More sqrt fixes.

        * tests/CCLayerTreeHostCommonTest.cpp:

2012-07-18  Tony Chang  <tony@chromium.org>

        [chromium] Unreviewed compile fix for Android.
        
        Source/WebKit/chromium/tests/CCDamageTrackerTest.cpp: In member function 'virtual void<unnamed>::CCDamageTrackerTest_verifyDamageForTransformedLayer_Test::TestBody()':
        Source/WebKit/chromium/tests/CCDamageTrackerTest.cpp:332: error: call of overloaded 'sqrt(int)' is ambiguous

        * tests/CCDamageTrackerTest.cpp:
        (WebKitTests::TEST_F):

2012-07-18  Varun Jain  <varunjain@chromium.org>

        [chromium] Drag image for image elements should be scaled with device scale factor.
        https://bugs.webkit.org/show_bug.cgi?id=89688

        Reviewed by Adam Barth.

        * src/DragClientImpl.cpp:
        (WebKit::DragClientImpl::startDrag):
        * tests/DragImageTest.cpp:
        (WebCore::TEST):

2012-07-18  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] Fix style for numeric literals in chromium unit test code
        https://bugs.webkit.org/show_bug.cgi?id=91635

        Reviewed by Adrienne Walker.
